force-app/main/default/objects/Contact/fields/CustomTextField10__c.field-meta.xml
<CustomField>
    <fullName>CustomTextField10__c</fullName>
    <description>CustomTextField10</description>
    <inlineHelpText>CustomTextField10</inlineHelpText>
    <label>CustomTextField10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>