force-app/main/default/objects/Contact/fields/CustomTextField11__c.field-meta.xml
<CustomField>
    <fullName>CustomTextField11__c</fullName>
    <description>CustomTextField11</description>
    <inlineHelpText>CustomTextField11</inlineHelpText>
    <label>CustomTextField11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>