force-app/main/default/objects/Contact/fields/CustomTextField12__c.field-meta.xml
<CustomField>
    <fullName>CustomTextField12__c</fullName>
    <description>CustomTextField12</description>
    <inlineHelpText>CustomTextField12</inlineHelpText>
    <label>CustomTextField12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>